--- a/pom.xml
+++ b/pom.xml
@@ -30,4 +30,17 @@
         </dependency>
     </dependencies>
 
+    <build>
+
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
+
+    </build>
+
 </project>
